deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: roman20003821/node-js-on-docker:1679913697
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthCheck
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
