service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
